Fixed REST-API and Websocket had own separate mock-data instance. Show all state buttons on startpage, this prevent jumping screen during state-changes.

--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -285,6 +285,12 @@ p {
   background-image: linear-gradient(top, #404040, #2a2a2a);
 }
 
+.button:disabled,
+.button[disabled] {
+  opacity: 0.2;
+  cursor: not-allowed;
+}
+
 .button:active,
 .button.active {
   line-height: 32px;
